# sre-agent-system

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  adk.yaml  requirements.txt
agents/: __init__.py  gcp_agent.py  validation_agent.py
app/: .gitignore  README.md  pyproject.toml
app/agents/: agent.py  discovery_agent.py  gcp_agent.py  linux_agent.py  validation_agent.py  windows_agent.py
app/tools/: gce_executor.py  gke_executor.py  validator_tools.py
terraform/: .gitignore  bootstrap.sh  main.tf  outputs.tf
terraform/environments/prod/: backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/environments/prod/scripts/: install_jenkins.sh  jenkins_agent_setup.sh file was not commited to git as it has secret value, need to be handled mannually
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
tools/: gce_executor.py  gcs_executor.py  memory_store.py
